feat: some fixes

--- a/apps/portfolio/src/assets/i18n/en.json
+++ b/apps/portfolio/src/assets/i18n/en.json
@@ -4,5 +4,7 @@
   "MISSIONS": "Missions",
   "ABOUT_ME": "About me",
   "WORK_EXPERIENCES": "Work experiences",
-  "SKILLS": "Skills"
+  "SKILLS": "Skills",
+  "TO": "to",
+  "NOW": "today"
 }
