--- a/apps/portfolio/src/assets/i18n/fr.json
+++ b/apps/portfolio/src/assets/i18n/fr.json
@@ -4,5 +4,7 @@
   "MISSIONS": "Missions",
   "ABOUT_ME": "A propos de moi",
   "WORK_EXPERIENCES": "Expériences professionnelles",
-  "SKILLS": "Compétences"
+  "SKILLS": "Compétences",
+  "TO": "à",
+  "NOW": "aujourd'hui"
 }
