feat: badge for skills

--- a/apps/portfolio/src/assets/i18n/en.json
+++ b/apps/portfolio/src/assets/i18n/en.json
@@ -6,5 +6,6 @@
   "WORK_EXPERIENCES": "Work experiences",
   "SKILLS": "Skills",
   "TO": "to",
-  "NOW": "today"
+  "NOW": "today",
+  "ALL": "All"
 }
