--- a/apps/portfolio/src/assets/i18n/fr.json
+++ b/apps/portfolio/src/assets/i18n/fr.json
@@ -6,5 +6,6 @@
   "WORK_EXPERIENCES": "Expériences professionnelles",
   "SKILLS": "Compétences",
   "TO": "à",
-  "NOW": "aujourd'hui"
+  "NOW": "aujourd'hui",
+  "ALL": "Tout"
 }
